@@ -1,3 +1,4 @@
+* Support explicit delete and remove for saving and on_change xxx2Many
 * Add export_data_domain to ModelStorage
 * Add route to export CSV data
 * Add test on target of relation fields
